--- a/TP2-x86_64/ej1/Makefile
+++ b/TP2-x86_64/ej1/Makefile
@@ -1,7 +1,7 @@
-CC=c99
-CFLAGS= -Wall -Wextra -pedantic -O0 -g -lm -Wno-unused-variable -Wno-unused-parameter -no-pie -z noexecstack
+CC=cc
+CFLAGS = -target x86_64-apple-macos11 -Wall -Wextra -pedantic -O0 -g -Wno-unused-variable -Wno-unused-parameter
 NASM=nasm
-NASMFLAGS=-f elf64 -g -F DWARF
+NASMFLAGS=-f macho64 -g
 
 all: main tester
 
