--- a/TP2-x86_64/ej1/main.dSYM/Contents/Resources/Relocations/x86_64/main.yml
+++ b/TP2-x86_64/ej1/main.dSYM/Contents/Resources/Relocations/x86_64/main.yml
@@ -15,7 +15,7 @@ relocations:
   - { offset: 0x25D, size: 0x8, addend: 0x0, symName: _string_proc_list_add_node, symObjAddr: 0xC0, symBinAddr: 0x100000820, symSize: 0x90 }
   - { offset: 0x2AB, size: 0x8, addend: 0x0, symName: _string_proc_list_concat, symObjAddr: 0x150, symBinAddr: 0x1000008B0, symSize: 0xB0 }
   - { offset: 0x327, size: 0x8, addend: 0x0, symName: _str_concat, symObjAddr: 0x200, symBinAddr: 0x100000960, symSize: 0x80 }
-  - { offset: 0x395, size: 0x8, addend: 0x0, symName: _string_proc_list_destroy, symObjAddr: 0x280, symBinAddr: 0x1000009E0, symSize: 0x70 }
-  - { offset: 0x3D5, size: 0x8, addend: 0x0, symName: _string_proc_node_destroy, symObjAddr: 0x2F0, symBinAddr: 0x100000A50, symSize: 0x50 }
-  - { offset: 0x3F9, size: 0x8, addend: 0x0, symName: _string_proc_list_print, symObjAddr: 0x340, symBinAddr: 0x100000AA0, symSize: 0x9B }
+  - { offset: 0x395, size: 0x8, addend: 0x0, symName: _string_proc_list_destroy, symObjAddr: 0x280, symBinAddr: 0x1000009E0, symSize: 0x80 }
+  - { offset: 0x3D5, size: 0x8, addend: 0x0, symName: _string_proc_node_destroy, symObjAddr: 0x300, symBinAddr: 0x100000A60, symSize: 0x50 }
+  - { offset: 0x3F9, size: 0x8, addend: 0x0, symName: _string_proc_list_print, symObjAddr: 0x350, symBinAddr: 0x100000AB0, symSize: 0x9B }
 ...
