--- a/TP2-x86_64/ej1/tester.dSYM/Contents/Resources/Relocations/x86_64/tester.yml
+++ b/TP2-x86_64/ej1/tester.dSYM/Contents/Resources/Relocations/x86_64/tester.yml
@@ -13,7 +13,7 @@ relocations:
   - { offset: 0x4AD, size: 0x8, addend: 0x0, symName: _string_proc_list_add_node, symObjAddr: 0xC0, symBinAddr: 0x100002E60, symSize: 0x90 }
   - { offset: 0x4FB, size: 0x8, addend: 0x0, symName: _string_proc_list_concat, symObjAddr: 0x150, symBinAddr: 0x100002EF0, symSize: 0xB0 }
   - { offset: 0x577, size: 0x8, addend: 0x0, symName: _str_concat, symObjAddr: 0x200, symBinAddr: 0x100002FA0, symSize: 0x80 }
-  - { offset: 0x5E5, size: 0x8, addend: 0x0, symName: _string_proc_list_destroy, symObjAddr: 0x280, symBinAddr: 0x100003020, symSize: 0x70 }
-  - { offset: 0x625, size: 0x8, addend: 0x0, symName: _string_proc_node_destroy, symObjAddr: 0x2F0, symBinAddr: 0x100003090, symSize: 0x50 }
-  - { offset: 0x649, size: 0x8, addend: 0x0, symName: _string_proc_list_print, symObjAddr: 0x340, symBinAddr: 0x1000030E0, symSize: 0x9B }
+  - { offset: 0x5E5, size: 0x8, addend: 0x0, symName: _string_proc_list_destroy, symObjAddr: 0x280, symBinAddr: 0x100003020, symSize: 0x80 }
+  - { offset: 0x625, size: 0x8, addend: 0x0, symName: _string_proc_node_destroy, symObjAddr: 0x300, symBinAddr: 0x1000030A0, symSize: 0x50 }
+  - { offset: 0x649, size: 0x8, addend: 0x0, symName: _string_proc_list_print, symObjAddr: 0x350, symBinAddr: 0x1000030F0, symSize: 0x9B }
 ...
